fix: add scrollbar
fix: add scrollbar

--- a/src/assets/styles/Navbar.scss
+++ b/src/assets/styles/Navbar.scss
@@ -111,6 +111,7 @@
       width: 100%;
       max-width: calc(768px / 2);
       height: 100%;
+      border: none;
     }
 
     &_title {
