--- a/src/assets/styles/Setting.scss
+++ b/src/assets/styles/Setting.scss
@@ -1,7 +1,9 @@
 .setting-container {
   width: 100%;
   min-width: 300px;
-  margin: 60px auto 0 auto;
+  height: calc(100vh - 50px - 7.5rem);
+  overflow-y: auto;
+  margin: 50px auto 0 auto;
   padding: 1rem;
 
   &_title {
